# invenio-rdm-starter

./: .dockerignore  .env.default  .env.example  .gitignore  404.html  CNAME  Caddyfile  Dockerfile  LICENSE  Pipfile  README.md  compose.yml  docker-compose.yml  entrypoint.py  entrypoint.sh  env.yaml  fly.toml  index.html  init.sh  invenio.cfg  log4j2.properties  mkdocs.yml  netlify.toml  nixpacks.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.sh  sitemap.xml
.github/workflows/: pages.yml  publish-docs.yml  publish.yml  release.yml  static.yml
.gthub/workflows/: publish.yml
_site/: 404.html  index.html  sitemap.xml
_site/search/: search_index.json
_site/stylesheets/: extra.css
app_data/: users.yaml  vocabularies.yaml  vocabularies_future.yaml
app_data/vocabularies/: affiliations_ror.yaml  awards.yaml  community_types.yaml  funders.yaml  languages.yaml  licences.csv  names.yaml  relation_types.yaml  resource_types.yaml  rs_licences.csv  subjects_openalex_domains.yaml  subjects_openalex_fields.yaml  subjects_openalex_subfields.yaml  subjects_openalex_topics.yaml
assets/js/invenio_app_rdm/components/overrides/: RecordsResultsListItem.js
assets/js/invenio_app_rdm/overridableRegistry/: RecordsResultsListItem.js  index.js  mapping.js
assets/js/site/overridableRegistry/: mapping.js
assets/less/site/collections/: grid.overrides  menu.overrides
assets/less/site/elements/: button.overrides  container.overrides  header.overrides  image.variables  label.overrides  list.overrides
assets/less/site/globals/: site.overrides  site.variables
assets/less/site/modules/: accordion.overrides
assets/less/site/views/: item.overrides
config/: deploy.yml
docker/nginx/conf.d/: default.conf
docker/opensearch/nodes/0/_state/: _4.cfe  _4.cfs  _4.si  node-0.st  segments_7
docs/: Dockerfile  _publish.yml  _quarto.yml  blog.qmd  index.md  mkdocs.yml  netlify.toml  pyproject.toml
docs/_site/: blog.html  blog.xml  index.html  robots.txt  search.json  sitemap.xml
docs/_site/posts/announcing-invenio-rdm-starter/: index.html
docs/posts/: _metadata.yml
docs/posts/announcing-invenio-rdm-starter/: index.qmd
docs/stylesheets/: extra.css
etc/caddy/: Caddyfile
fly/applications/caddy/: Caddyfile  Dockerfile  fly.toml
overrides/partials/: comments.html
search/: search_index.json
site/: setup.cfg
site/invenio_rdm_starter/: views.py  webpack.py
src/invenio_rdm_starter/: __init__.py
templates/semantic-ui/invenio_app_rdm/: footer.html  header_frontpage.html  site_footer.html
templates/semantic-ui/invenio_app_rdm/help/: search.en.html
templates/semantic-ui/invenio_app_rdm/records/: detail.html
templates/semantic-ui/invenio_app_rdm/records/details/: description.html  details.html
(+4 files in other folders)
