[project]
name = "invenio-rdm-starter"
version = "13.0.5.0"
description = "Starter for the invenio-rdm turn-key research data management repository"
authors = [{ name = "Martin Fenner", email = "martin@front-matter.io" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "invenio-app-rdm>=13.0.5,<14.0.0",
    "invenio-search[opensearch2]>=3.0.0",
    "invenio-previewer>=3.3.0,<3.4.0",
    "gunicorn~=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["site/invenio_rdm_starter/*.py"]

[tool.ruff]
line-length = 79
include = ["pyproject.toml", "site/**/*.py"]

[project.optional-dependencies]
docs = ["mkdocs-material>=9.7.0"]
