
[metadata]
name = invenio-rdm-starter

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    invenio_rdm_starter_views = invenio_rdm_starter.views:create_blueprint
invenio_assets.webpack =
    invenio_rdm_starter_theme = invenio_rdm_starter.webpack:theme
